a lot of testing done (Logger, Strategy classes, some parts of trafficLights with mocks)