@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
@@ -19,4 +22,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.test {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
